--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url(../css/clash-display.css);
 :root {
-  --c-dark: #212529;
-  --c-brand: #4e57d4;
-  --c-brand-light: #6970dd;
-  --c-brand-rgb: 78, 87, 212;
+  --c-dark: #272e41;
+  --c-brand: #272e41;
+  --c-brand-light: #;
+  --c-brand-rgb: 39, 46, 65;
   --c-body: #727272;
   --font-base: "ClashDisplay", sans-serif;
   --box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.08);
