--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,10 @@
-@import url(../css/clash-display.css);
 :root {
   --c-dark: #272e41;
   --c-brand: #272e41;
   --c-brand-light: #;
   --c-brand-rgb: 39, 46, 65;
   --c-body: #727272;
-  --font-base: "ClashDisplay", sans-serif;
+  --font-base: "Clash Display", sans-serif;
   --box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.08);
   --transition: all 0.5s ease;
 }
@@ -14,6 +13,10 @@ body {
   font-family: var(--font-base);
   line-height: 1.7;
   color: var(--c-body);
+}
+
+.seo {
+  display: none;
 }
 
 h1,
@@ -105,8 +108,7 @@ img {
 
 .btn-brand:hover {
   background-color: var(--c-brand-light);
-  border-color: var(--c-brand-light);
-  color: white;
+  border-color: var(--c-brand-dark);
 }
 
 /* HERO */
@@ -200,6 +202,11 @@ img {
 
 /* PORTFOLIO */
 
+.portfolio-img {
+  width: 250px;
+  height: 200px;
+  object-fit: contain;
+}
 .portfolio-item .iconbox {
   background-color: var(--c-brand);
   color: white;
